--- a/index.html
+++ b/index.html
@@ -1,96 +1,72 @@
-{\rtf1\ansi\ansicpg1252\cocoartf2818
-\cocoatextscaling0\cocoaplatform0{\fonttbl\f0\fswiss\fcharset0 Helvetica;}
-{\colortbl;\red255\green255\blue255;}
-{\*\expandedcolortbl;;}
-\paperw11900\paperh16840\margl1440\margr1440\vieww25100\viewh13420\viewkind0
-\pard\tx720\tx1440\tx2160\tx2880\tx3600\tx4320\tx5040\tx5760\tx6480\tx7200\tx7920\tx8640\pardirnatural\partightenfactor0
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <title>Login & Sign Up Form</title>
+</head>
+<body>
+  <div class="login-wrap">
+    <div class="login-html">
+      <input id="tab-1" type="radio" name="tab" class="sign-in" checked>
+      <label for="tab-1" class="tab">Sign In</label>
 
-\f0\fs24 \cf0 <!DOCTYPE html>\
-<html lang="en">\
-<head>\
-    <meta charset="UTF-8">\
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">\
-    <title>Login Page</title>\
-    <style>\
-        body \{\
-            font-family: Arial, sans-serif;\
-            background-color: #f0f0f0;\
-            margin: 0;\
-            padding: 0;\
-            display: flex;\
-            justify-content: center;\
-            align-items: center;\
-            height: 100vh;\
-        \}\
-        .login-container \{\
-            background-color: white;\
-            padding: 20px;\
-            border-radius: 10px;\
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);\
-            width: 300px;\
-            text-align: center;\
-        \}\
-        input \{\
-            width: 100%;\
-            padding: 10px;\
-            margin: 10px 0;\
-            border: 1px solid #ccc;\
-            border-radius: 5px;\
-        \}\
-        button \{\
-            padding: 10px 20px;\
-            background-color: #28a745;\
-            border: none;\
-            border-radius: 5px;\
-            color: white;\
-            cursor: pointer;\
-        \}\
-        button:hover \{\
-            background-color: #218838;\
-        \}\
-        .hidden \{\
-            display: none;\
-        \}\
-        .welcome-message \{\
-            font-size: 18px;\
-            color: #333;\
-        \}\
-    </style>\
-</head>\
-<body>\
-    <div class="login-container" id="login-container">\
-        <h2>Login</h2>\
-        <input type="text" id="username" placeholder="Enter username">\
-        <input type="password" id="password" placeholder="Enter password">\
-        <button onclick="login()">Log In</button>\
-    </div>\
-    \
-    <div class="login-container hidden" id="logout-container">\
-        <h2 class="welcome-message" id="welcome-message">Welcome, user!</h2>\
-        <button onclick="logout()">Log Out</button>\
-    </div>\
-\
-    <script>\
-        function login() \{\
-            const username = document.getElementById('username').value;\
-            const password = document.getElementById('password').value;\
-            \
-            if (username === 'admin' && password === 'password') \{\
-                document.getElementById('login-container').classList.add('hidden');\
-                document.getElementById('logout-container').classList.remove('hidden');\
-                document.getElementById('welcome-message').innerText = `Welcome, $\{username\}!`;\
-            \} else \{\
-                alert('Invalid username or password');\
-            \}\
-        \}\
-\
-        function logout() \{\
-            document.getElementById('login-container').classList.remove('hidden');\
-            document.getElementById('logout-container').classList.add('hidden');\
-            document.getElementById('username').value = '';\
-            document.getElementById('password').value = '';\
-        \}\
-    </script>\
-</body>\
-</html>\
-}
+      <input id="tab-2" type="radio" name="tab" class="sign-up">
+      <label for="tab-2" class="tab">Sign Up</label>
+
+      <div class="login-form">
+        <!-- Sign In Form -->
+        <div class="sign-in-htm">
+          <div class="group">
+            <label for="signin-username" class="label">Username</label>
+            <input id="signin-username" type="text" class="input" placeholder="Enter your username" required>
+          </div>
+          <div class="group">
+            <label for="signin-password" class="label">Password</label>
+            <input id="signin-password" type="password" class="input" placeholder="Enter your password" required>
+          </div>
+          <div class="group">
+            <input id="keep-signed-in" type="checkbox" class="check" checked>
+            <label for="keep-signed-in"><span class="icon"></span> Keep me Signed in</label>
+          </div>
+          <div class="group">
+            <button type="submit" class="button">Sign In</button>
+          </div>
+          <div class="hr"></div>
+          <div class="foot-lnk">
+            <a href="#forgot">Forgot Password?</a>
+          </div>
+        </div>
+
+        <!-- Sign Up Form -->
+        <div class="sign-up-htm">
+          <div class="group">
+            <label for="signup-username" class="label">Username</label>
+            <input id="signup-username" type="text" class="input" placeholder="Create a username" required>
+          </div>
+          <div class="group">
+            <label for="signup-password" class="label">Password</label>
+            <input id="signup-password" type="password" class="input" placeholder="Create a password" required>
+          </div>
+          <div class="group">
+            <label for="signup-repeat-password" class="label">Repeat Password</label>
+            <input id="signup-repeat-password" type="password" class="input" placeholder="Repeat your password" required>
+          </div>
+          <div class="group">
+            <label for="signup-email" class="label">Email Address</label>
+            <input id="signup-email" type="email" class="input" placeholder="Enter your email" required>
+          </div>
+          <div class="group">
+            <button type="submit" class="button">Sign Up</button>
+          </div>
+          <div class="hr"></div>
+          <div class="foot-lnk">
+            <label for="tab-1">Already a Member?</label>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</body>
+</html>
